# backbone-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
backbone-auth/: CHANGELOG.md  Cargo.toml  README.md
backbone-auth/examples/: advanced_usage.rs  api_integration.rs  basic_usage.rs  database_integration.rs  security_scenarios.rs  session_management.rs
backbone-auth/src/: audit.rs  auth_service.rs  company.rs  idempotency.rs  jwt.rs  lib.rs  middleware.rs  password.rs  permissions.rs  resource_policy.rs  tenant.rs  token_generator.rs  traits.rs
backbone-auth/tests/: auth_service_tests.rs  company_guard.rs  tenant_guard.rs
backbone-authorization/: CHANGELOG.md  Cargo.toml
backbone-authorization/src/: cache.rs  lib.rs  middleware.rs  redis_cache.rs  service.rs  traits.rs  types.rs
backbone-authorization/tests/: redis_cache_tests.rs
backbone-cache/: CHANGELOG.md  Cargo.toml  README.md
backbone-cache/examples/: advanced_usage.rs  basic_usage.rs  error_handling.rs  performance_testing.rs  real_world_scenarios.rs
backbone-cache/src/: lib.rs  memory.rs  redis.rs  traits.rs
backbone-cache/tests/: cache_tests.rs  redis_tests.rs
backbone-core/: CHANGELOG.md  Cargo.toml  README.md
backbone-core/docs/: README.md  api-reference.md  architecture.md  configuration.md  openapi.md  openapi.template.yaml  usage.md
backbone-core/examples/: README.md  advanced_pagination.rs  basic_usage.rs  error_handling.rs  scenario_ecommerce.rs
backbone-core/src/: aggregate.rs  builder.rs  bulk.rs  command.rs  cqrs.rs  crud.rs  domain_service.rs  entity.rs  error.rs  extractors.rs  flow.rs  graphql.rs  grpc.rs  http.rs  integration.rs  lib.rs  macros.rs  module.rs  module_registry.rs  openapi.rs  policy.rs  projection.rs  query.rs  registry.rs  repository.rs  service.rs  specification.rs  state_machine.rs  trigger.rs  usecase.rs  utils.rs  validation.rs  value_object.rs
backbone-core/tests/: core_tests.rs.disabled  crud_macro_compile.rs  grpc_integration_tests.rs.disabled  http_integration_tests.rs.disabled
backbone-email/: CHANGELOG.md  Cargo.toml  README.md
backbone-email/src/: lib.rs  mailgun.rs  ses.rs  smtp.rs  traits.rs  types.rs
backbone-email/tests/: email_service_tests.rs  smtp_test.rs
backbone-health/: CHANGELOG.md  Cargo.toml
backbone-health/examples/: health_demo.rs
backbone-health/src/: checker.rs  cli.rs  components.rs.disabled  components_simple.rs  endpoints.rs.disabled  health_server.rs  lib.rs  metrics.rs.disabled  routes.rs  status.rs
backbone-health/tests/: health_tests.rs
backbone-jobs/: CHANGELOG.md  Cargo.toml  README.md
backbone-jobs/examples/: basic_scheduler.rs  cron_jobs.rs  database_cleanup.rs
backbone-jobs/src/: builder.rs  config.rs  cron.rs  error.rs  job.rs  lib.rs  monitoring.rs  pg_cron.rs  scheduler.rs  types.rs
backbone-maintenance/: Cargo.toml
backbone-maintenance/src/: lib.rs
backbone-maintenance/tests/: middleware_test.rs
backbone-messaging/: CHANGELOG.md  Cargo.toml
backbone-messaging/src/: bus.rs  crud_event.rs  envelope.rs  error.rs  event.rs  handler.rs  integration.rs  integration_bus.rs  lib.rs  noop.rs  subscriber.rs
backbone-messaging/tests/: messaging_tests.rs
backbone-observability/: CHANGELOG.md  Cargo.toml
backbone-observability/src/: audit.rs  config.rs  lib.rs  logging.rs  metrics.rs  middleware.rs  tests.rs  tracing.rs
backbone-orm/: CHANGELOG.md  Cargo.toml  README.md
backbone-orm/benches/: filter_bench.rs
backbone-orm/examples/: comprehensive_usage_examples.md
backbone-orm/src/: company_scope.rs  connection.rs  generic_repository.rs  in_memory.rs  lib.rs  migrations.rs  migrations_tests.rs  query_builder.rs  query_builder_tests.rs  raw_query.rs  raw_query_tests.rs  repository.rs  repository_tests.rs  seeding.rs  seeding_tests.rs
backbone-orm/tests/: company_fence.rs  integration_tests.rs.disabled  orm_tests.rs  raw_query_integration_tests.rs.disabled  rls_scope_live.rs  seeding_integration_tests.rs.disabled  tenant_fence.rs
backbone-outbox/: Cargo.toml  README.md
backbone-outbox/src/: error.rs  inbox.rs  lib.rs  outbox.rs  record.rs  relay.rs  runner.rs
backbone-outbox/tests/: mechanics.rs  relay_runner.rs
backbone-queue/: CHANGELOG.md  Cargo.toml  README.md
backbone-queue/docs/: RABBITMQ_GUIDE.md
backbone-queue/examples/: README.md  advanced_monitoring.rs  basic_redis_queue.rs  compression_demo.rs  fifo_queue_demo.rs  monitoring_dashboard.rs  processor_demo.rs  queue_manager_demo.rs  rabbitmq_examples.rs  rabbitmq_realtime_chat.rs  rabbitmq_webhook_processor.rs  sqs_queue_examples.rs  validation_demo.rs  worker_pool.rs
backbone-queue/src/: compression.rs  compression_tests.rs  deduplication.rs  deduplication_tests.rs  fifo.rs  fifo_tests.rs  lib.rs  monitoring.rs  monitoring_tests.rs  processor.rs  processor_tests.rs  queue_manager.rs  queue_manager_tests.rs  rabbitmq.rs  rabbitmq_simple.rs  rabbitmq_tests.rs  redis.rs  redis_tests.rs  sqs.rs  sqs_tests.rs  traits.rs  types.rs  validation.rs  validation_tests.rs  validation_utils.rs
backbone-queue/tests/: integration_tests.rs
backbone-rate-limit/: CHANGELOG.md  Cargo.toml  README.md
backbone-rate-limit/src/: dual.rs  lib.rs  limiter.rs  middleware.rs  redis_storage.rs  service.rs  storage.rs  types.rs
backbone-rate-limit/tests/: redis_integration.rs
backbone-search/: CHANGELOG.md  Cargo.toml  README.md
backbone-search/examples/: Cargo.toml  README.md  advanced_search.rs  algolia_setup.rs  basic_usage.rs  deduplication_demo.rs  elasticsearch_setup.rs  testing_examples.rs
backbone-search/src/: algolia.rs  elasticsearch.rs  lib.rs  traits.rs  types.rs
backbone-storage/: CHANGELOG.md  Cargo.toml  README.md
backbone-storage/examples/: basic_usage.rs.disabled  image_processing.rs.disabled  security_scanning.rs.disabled
backbone-storage/src/: compression.rs  compression_engine.rs  error.rs  lib.rs  local.rs  local_simple.rs  minio.rs  s3.rs  security.rs  traits.rs  types.rs
backbone-tenant/: Cargo.toml  README.md
backbone-tenant/src/: lib.rs  provision.rs
backbone-tenant/tests/: provision_live.rs  (+1 more)
(+55 files in other folders)
