[workspace]
resolver = "2"
members = [
    "backbone-auth",
    "backbone-authorization",
    "backbone-cache",
    "backbone-core",
    "backbone-email",
    "backbone-graphql",
    "backbone-health",
    "backbone-jobs",
    "backbone-maintenance",
    "backbone-messaging",
    "backbone-observability",
    "backbone-orm",
    "backbone-queue",
    "backbone-rate-limit",
    "backbone-search",
    "backbone-storage",
]

# Each member crate keeps its own dependency declarations. There is intentionally
# no [workspace.dependencies] table — every crate was self-describing in
# monorepo-backbone (no workspace inheritance), so we preserve that property
# during extraction. Lift-and-shift discipline: the source files inside each
# member directory are byte-for-byte unchanged from monorepo-backbone.

# Distribution model: this workspace is consumed via git deps, not crates.io.
# Downstream projects pin the whole framework at a point in time with:
#   backbone-core = { git = "...", tag = "v<version>" }
# The release tag and the version below move together. The release workflow
# (.github/workflows/release.yml) refuses to publish a `v*` tag whose version
# doesn't match this field.
[workspace.metadata.release]
version = "2.1.5"
