[package]
name = "backbone-authorization"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework Authorization - Centralized RBAC authorization service"

[lib]
name = "backbone_authorization"
path = "src/lib.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Web Framework
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-layer = "0.3"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
futures = "0.3"

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Redis (optional)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
default = []
database = ["sqlx"]
redis = ["dep:redis"]
