[package]
name = "backbone-core"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework Core - Foundation for generic CRUD system"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
regex = "1.0"

# Logging
tracing = "0.1"

# Messaging — used by GenericCrudService for event publishing
backbone-messaging = { path = "../backbone-messaging" }

# Configuration
serde_yaml = "0.9"
toml = "0.8"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = { version = "0.13", optional = true }

# Web Framework (Axum for generic CRUD handlers)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (optional - only for builder pattern examples)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }

[features]
default = []
database = ["sqlx"]
postgres = ["sqlx"]
prost = ["prost-types"]
# Enable all persistence features
full = ["postgres", "prost"]

