[package]
name = "backbone-health"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework Health Check Module - Production monitoring and health endpoints"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# HTTP server for health endpoints
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"

# Optional database support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Optional dependencies (commented out for simplicity)
# reqwest = { version = "0.11", features = ["json"], optional = true }
# redis = { version = "0.24", features = ["tokio-comp"], optional = true }

[features]
default = []
database = ["sqlx"]
# http = ["reqwest"]
# redis = ["dep:redis"]
# full = ["database", "http", "redis"]

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4"

[[example]]
name = "health_demo"
path = "examples/health_demo.rs"

# Temporarily disable complex examples to focus on core functionality
# [[example]]
# name = "basic_usage"
# path = "examples/basic_usage.rs"
# required-features = []

# [[example]]
# name = "advanced_usage"
# path = "examples/advanced_usage.rs"
# required-features = []