[package]
name = "backbone-jobs"
version = "0.1.0"
edition = "2021"
authors = ["Rusty Framework Team"]
description = "Job scheduling and cron management for the Backbone Framework"
license = "MIT"
repository = "https://github.com/startapp-id/backbone"
keywords = ["scheduler", "cron", "jobs", "background", "async"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.10"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing and logging
tracing = "0.1"
tracing-futures = "0.2"

# Cron expression parsing
cron = "0.12"

# Backbone dependencies
backbone-queue = { path = "../backbone-queue" }

# Utility
futures = "0.3"

# Configuration
config = "0.14"

# HTTP for health checks
axum = "0.7"

# Random for jitter
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
monitoring = []
health-checks = []

[[example]]
name = "basic_scheduler"
path = "examples/basic_scheduler.rs"

[[example]]
name = "cron_jobs"
path = "examples/cron_jobs.rs"

[[example]]
name = "database_cleanup"
path = "examples/database_cleanup.rs"