[package]
name = "backbone-messaging"
version = "2.0.0"
edition = "2021"
authors = ["Backbone Framework Team"]
description = "Event-driven messaging infrastructure for Backbone Framework"
license = "MIT"
repository = "https://github.com/example/backbone"
keywords = ["messaging", "events", "event-bus", "domain-events", "cqrs"]
categories = ["asynchronous", "data-structures"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["sync", "rt-multi-thread", "time"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }

[features]
default = []
# Enable Redis-based event bus
redis = []
# Enable RabbitMQ-based event bus
rabbitmq = []
# Enable Kafka-based event bus
kafka = []
