[package]
name = "backbone-observability"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework Observability - Tracing, logging, and metrics"

[lib]
name = "backbone_observability"
path = "src/lib.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
once_cell = "1.19"

# HTTP types (required for middleware)
http = "1.0"
http-body = "1.0"
bytes = "1.0"

# Logging
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry (always available)
opentelemetry = { version = "0.27", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.27", default-features = false, features = ["rt-tokio"] }

# Structured logging
gethostname = "0.4"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Axum for metrics server (optional)
axum = { version = "0.7", optional = true, default-features = false, features = ["http1", "tokio"] }
tower = { version = "0.5", optional = true }

[features]
default = ["prometheus-metrics", "otel-tracing", "middleware"]

# JSON structured logging
json-logs = []

# Observability middleware for HTTP requests
middleware = ["dep:tower"]

# Prometheus metrics export with HTTP server
prometheus-metrics = [
    "dep:prometheus",
    "dep:metrics-exporter-prometheus",
    "dep:axum",
    "dep:tower",
    "tokio/net"
]

# OpenTelemetry tracing
otel-tracing = [
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry"
]

# OTLP export for OpenTelemetry
otlp = [
    "otel-tracing",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-http"
]

[dependencies.prometheus]
version = "0.13"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.13"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.27"
optional = true
features = ["grpc-tonic", "http-proto", "reqwest-client"]

[dependencies.opentelemetry-stdout]
version = "0.27"
optional = true

[dependencies.opentelemetry-http]
version = "0.27"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.28"
optional = true
