[package]
name = "backbone-orm"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework ORM - Database layer with PostgreSQL support"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
colored = "2.0"
regex = "1.0"

# Testing
sqlx-cli = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
cli = ["sqlx-cli"]

[[bench]]
name = "filter_bench"
harness = false