[package]
name = "backbone-outbox"
version = "0.1.0"
edition = "2021"
description = "Durable transactional-outbox + inbox + relay primitives for go-live exactly-once event delivery over Postgres."

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time", "macros", "rt"], optional = true }

[features]
# The relay RUNNER (a poll loop that drains the outbox on an interval until shutdown). Off by default —
# a producer/composition service enables it; the outbox/inbox primitives don't need tokio.
runner = ["dep:tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
