[package]
name = "backbone-queue"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework Queue Module - Redis, SQS, and RabbitMQ support"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait
async-trait = "0.1"

# Redis support
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# AWS SQS support
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.0"

# RabbitMQ support
lapin = "2.5"
futures-lite = "2.0"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Base64 encoding
base64 = "0.22"

# Compression
flate2 = "1.0"

# Monitoring and metrics
reqwest = { version = "0.11", features = ["json"] }

# Regular expressions for validation
regex = "1.0"

# Random number generation
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
env_logger = "0.10"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }