[package]
name = "backbone-search"
version = "2.0.0"
edition = "2021"
description = "Backbone Framework Search Module - Elasticsearch and Algolia support"
autoexamples = false

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait
async-trait = "0.1"

# Elasticsearch support
elasticsearch = { version = "8.15.0-alpha.1" }

# Algolia support
algoliasearch = "0.1.7"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# URL encoding
url = "2.5"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"